--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       th:replace="layout :: layout(~{::title}, ~{::section})">
 <head>
-    <title>Issue Tracker</title>
+    <title>Jatter Client</title>
 </head>
 <body>
 
